--- a/contact-cards/package.json
+++ b/contact-cards/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-props-practice",
+  "name": "mapping-components-completed",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
